src/test/testFiles/invalid/semanticErrors/redeclaredParameterInFunction.manimdsl
fun function(number x, number x): number {
    let z: number = x + x;
    return z;
}

let z = 0;